# treedet

./: .flake8  .gitignore  README.md  README_installation_notes.md  commands.sh  config.py  data_config.py  eval_kpts.py  get_dataset_params.py  kpts_onnx_inference.py  kpts_trt_inference.py  plotkeypoints.py  requirements.txt  setup.sh  sidebyside.py  train.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/treedet/: Dockerfile  devcontainer.json
.devcontainer/treedet_ros/: Dockerfile  devcontainer.json
datasets/: README.md
exps/default/: yolox_s_tree_pose.py  yolox_tree_pose.py
tools/: export_onnx.py  train.py
treedet/: .gitignore  commands.sh  compare.sh  config.py  eval_kpts.py  get_dataset_params.py  kpts_onnx_inference.py  kpts_trt_inference.py  plotkeypoints.py  requirements.txt  setup.py  sidebyside.py
treedet/tools/: export_onnx.py  (+2 more)
treedet_ros/: CMakeLists.txt  package.xml  setup.py  view_zed.rviz
treedet_ros/launch/: align_maps.launch  auto_select_targets.launch  inference.launch  main.launch  select_targets.launch
treedet_ros/nodes/: main  publish_targets  select_targets
treedet_ros/rviz/: compare_targets_dets.rviz  select_targets.rviz  view_dets.rviz
treedet_ros/scripts/: README.md  closest_pts.py  crop_pcd.py  eval_detected_trees.py  inference.py  map_to_map_o3d.py  mark_visible_trees.py  pcl.py  save_detected_trees.py  test_cylinder_fit.py  view_detected_trees.py  xyz_map.npy
treedet_ros/src/treedet_ros/: __init__.py  bbox.py  cutting_data.py  fit_cylinder.py  icp.py  inference.py  pcl.py  rviz.py  sort.py  sort_tracker.py
(+42 files in other folders)
