<?xml version="1.0"?>
<package format="2">
  <name>treedet_ros</name>
  <version>0.1.0</version>
  <description>Tree detector from RBG and LiDAR sensors</description>
  <maintainer email="mmarolf@ethz.ch">mmarolf</maintainer>
  <author email="mmarolf@ethz.ch">mmarolf</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>message_generation</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
